# iot-predictive-maintenance

./: .gitignore  Dockerfile  README.md  dashboard.html  docker-compose.yml  requirements.txt  test_api.py
api/: main.py
backend/: Dockerfile  pyproject.toml  requirements.txt  start_backend.py
backend/industrial_iot/: plc_emulator.py
backend/iot_simulator/: __init__.py  sensor_simulator.py
backend/models/: metadata.json  model.joblib  preprocessor.joblib
backend/src/: predict.py  preprocess.py  train.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/analytics/: EventLog.tsx  FailureChart.tsx
frontend/src/components/common/: InfoItem.tsx  NavItem.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/telemetry/: MetricCard.tsx  RiskBadge.tsx
frontend/src/hooks/: useTelemetry.ts
frontend/src/types/: telemetry.ts
industrial_iot/: gateway.py  plc_emulator.py
iot_simulator/: sensor_simulator.py
models/: metadata.json  preprocessor.joblib
notebooks/: Machine_Failure_Classification.ipynb
src/: predict.py  preprocess.py  train.py
